# md_tian

./: .gitignore  CMakeLists.txt  README.md  atom_class.f90  au111_2x2x4.POSCAR  compile  dtrnlspbc.f90  emt127_Au.nml  emt127_H.nml  evalulation.f90  fit4_tian.f90  force.f90  md_init.f90  md_tian.f90  md_tian.inp  md_tian_eq.inp  md_tian_fit.inp  mdalgo.f90  model.f90  nllsq_dbl.f  open_file.f90  output.f90  test001.inp  useful_things.f90
"bin"/: md_tian.x
Evaluation_Programm/: eloss.f90
Manual/: Manual.aux  Manual.bbl  Manual.blg  Manual.dvi  Manual.idx  Manual.ilg  Manual.ind  Manual.out  Manual.tex  Manual.toc  Manual1.tex  fitbib.bib  theory_group.bib
PES_Procedure/: prodPES.tex
docs/pes_procedure/: bib.bib  prodPES.aux
emt_pes/: emt_stroem_Au.nml  emt_stroem_H.nml
examples/: md_tian.inp  md_tian_fit.inp
examples/Evaluation_Programm/: eval.f90
src/: atom_class.f90  compile.sh  evalulation.f90  force.f90  md_init.f90  md_tian.f90  mdalgo.f90  open_file.f90
tests/: H_Au111.inp  H_Au111_3x3x4.POSCAR  au111_2x2x4.POSCAR  bulk.inp  bulk_Au111_4x4x4.poscar  compile.sh  emt.ipynb  emt_stroem_Au.nml  emt_stroem_H.nml  md_tian.inp  mdtian_1.txt  mdtian_2.txt  test.ipynb  test1.poscar  test2.poscar  tests_au111_2x2x4.inp
tests/traj/: mxt_anneal00000001.POSCAR  mxt_anneal00000002.POSCAR
